--- a/themes/medius/scss/main.scss
+++ b/themes/medius/scss/main.scss
@@ -10,8 +10,8 @@
 @import url(https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic&subset=latin,latin-ext);
 
 
-$font-family-sans: 'Open Sans', jaf-bernino-sans, 'Lucida Grande', 'Lucida Sans Unicode', 'Lucida Sans', Geneva, Verdana, sans-serif;
-$font-family-serif: Merriweather, freight-text-pro, Georgia, Cambria, 'Times New Roman', Times, serif;
+$font-family-sans: "PingFang SC","Helvetica Neue","Helvetica","Hiragino Sans GB","Arial","Verdana","Microsoft Yahei";
+$font-family-serif: "PingFang SC","Helvetica Neue","Helvetica","Hiragino Sans GB","Arial","Verdana","Microsoft Yahei";
 $font-family-mono: Consolas, 'Deja Vu Sans Mono', 'Ubuntu Mono', 'Bitstream Vera Sans Mono', Monaco, 'Courier New', monospace;
 
 
