--- a/themes/medius/templates/analytics.html
+++ b/themes/medius/templates/analytics.html
@@ -1,3 +1,14 @@
+{% if BAIDU_ANALYTICS %}
+<script>
+var _hmt = _hmt || [];
+(function() {
+  var hm = document.createElement("script");
+  hm.src = "https://hm.baidu.com/hm.js?48cdc59421c1e8aa6810e09a7b202fc0";
+  var s = document.getElementsByTagName("script")[0]; 
+  s.parentNode.insertBefore(hm, s);
+})();
+</script>
+{% endif %}
 {% if GOOGLE_ANALYTICS %}
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
